<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootRL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="143dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="50dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="Kazi Logo"
                android:background="#ffffff"
                android:src="@drawable/main_logo" />

        </TableRow>

        <TableRow
            android:id="@+id/trProgressBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <RelativeLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/circularProgressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="150dip"
                    android:layout_height="150dip"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:progressDrawable="@drawable/ring_progress_bar" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/login_processing_text" />

            </RelativeLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowWelcomeMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
            <TextView
                android:id="@+id/tvWelcomeText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                android:layout_marginTop="2dp"
                android:text="@string/app_title_text"
                android:textColor="#325f6e" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowSignInMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
            <TextView
                android:id="@+id/tvSignInText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16dp"
                android:layout_marginTop="2dp"
                android:text="@string/login_header_text"
                android:textColor="#325f6e" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/edtLoginName"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:paddingTop="7px"
                android:background="@drawable/editstyle_stroke"
                android:gravity="center_horizontal"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="Mobile Number"
                android:singleLine="true"
                android:textSize="24sp">

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:paddingTop="7px"
                android:background="@drawable/editstyle_stroke"
                android:drawablePadding="5dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="24sp">

            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowLoginButton"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:background="@drawable/flat_button_shape"
                android:text="Log In"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>
    </ScrollView>

</RelativeLayout>
